--- a/css/main.css
+++ b/css/main.css
@@ -52,3 +52,9 @@ ul.posts li {
     font-size: 1em;
     color: #e8edf3;
 }
+
+#aboutme {
+    font-size: 1em;
+    font-style: oblique;
+    color: #F8F1F1;
+}
