--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,7 +21,7 @@
 			</div><!-- /.container -->
 			<footer>
 	    		<ul>
-	        		<li><a href="mailto:hankquinlanhub@gmail.com">email</a></li>
+	        		<p id="email">"Email: ruhanli168@gmail.com"</p>
 	        		<li><a href="https://github.com/hankquinlan">github.com/hankquinlan</a></li>
 				</ul>
 			</footer>
