--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,7 +21,7 @@
 			</div><!-- /.container -->
 			<footer>
 	    		<ul>
-	        		<p id="email">"Email: ruhanli168@gmail.com"</p>
+	        		<p id="email">Email: ruhanli168@gmail.com</p>
 	        		<li><a href="https://github.com/RuhanLi">GitHub Link</a></li>
 				</ul>
 			</footer>
