--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,7 +10,7 @@
 	    		<ul>
 	        		<li><a href="/">Home</a></li>
 		        	<li><a href="/about">About</a></li>
-	        		<li><a href="/cv">Resume</a></li>
+	        		<li><a href="/CV">Resume</a></li>
 	        		<li><a href="/projects">Projects</a></li>
 	    		</ul>
 			</nav>
