--- a/css/main.css
+++ b/css/main.css
@@ -8,6 +8,8 @@ body {
 nav ul, footer ul {
     font-family:'Helvetica', 'Arial', 'Sans-Serif';
     padding: 0px;
+    position:absolute;
+    bottom:0;
     list-style: none;
     font-weight: bold;
 }
