--- a/css/main.css
+++ b/css/main.css
@@ -4,8 +4,13 @@ body {
     background-color: #173e43;
 }
 
+nav ul{
+    font-family:'Helvetica', 'Arial', 'Sans-Serif';
+    padding: 0px;
+    list-style: none;
+    font-weight: bold;
 
-nav ul, footer ul {
+nav ul, footer u2 {
     font-family:'Helvetica', 'Arial', 'Sans-Serif';
     padding: 0px;
     position:absolute;
