--- a/css/main.css
+++ b/css/main.css
@@ -4,6 +4,12 @@ body {
     background-color: #173e43;
 }
 
+nav ul {
+    font-family:'Helvetica', 'Arial', 'Sans-Serif';
+    padding: 0px;
+    list-style: none;
+    font-weight: bold;
+}
 
 nav ul, footer u1 {
     font-family:'Helvetica', 'Arial', 'Sans-Serif';
