--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,11 +7,11 @@
 		<body>
 			<nav>
 	    		<ul>
-	        		<li><a href="/">Home</a></li>
-		        	<li><a href="/about">About me</a></li>
-		        	<li><a href="/projects">Projects</a></li>
-	        		<li><a href="/CV">Resume</a></li>
-	    		</ul>
+  				<li><a href="/">Home</a></li>
+  				<li><a class="active" href="/about">About</a></li>
+  				<li><a href="/projects">Projects</a></li>
+  				<li><a href="/CV">Resume</a></li>
+			</ul>
 			</nav>
 			<div class="container">
 			
