--- a/css/main.css
+++ b/css/main.css
@@ -52,7 +52,7 @@ footer {
     bottom:0;
     left:0;
     border-top: 1px solid #d5d5d5;
-    font-size: .8em;
+    font-size: 12em;
 }
 
 #email {
