--- a/css/main.css
+++ b/css/main.css
@@ -52,7 +52,7 @@ footer {
     bottom:0;
     left:0;
     border-top: 1px solid #d5d5d5;
-    font-size: 12em;
+    font-size: 0.8em;
 }
 
 #email {
@@ -64,4 +64,11 @@ footer {
     font-size: 1em;
     font-style: oblique;
     color: #F8F1F1;
+}
+
+#footer {
+   position:absolute;
+   bottom:0;
+   width:100%;
+   height:100px;   
 }
