--- a/css/main.css
+++ b/css/main.css
@@ -60,11 +60,12 @@ footer {
     font-size: 1em;
     font-style: oblique;
     color: #F8F1F1;
-
-#footer {
-   position:absolute;
-   bottom:0;
-   height:100px;   
-   font-size: 1em;
-   color: #e8edf3;
+}
+    
+#footer{
+ position:fixed;
+ bottom:0;
+ left:0;
+ font-size: 1em;
+ color: #e8edf3;
 }
