--- a/css/main.css
+++ b/css/main.css
@@ -63,9 +63,8 @@ footer {
 }
     
 #footer{
- position:fixed;
+ position:center;
  bottom:0;
- left:0;
- font-size: 1em;
+ font-size: 0.5em;
  color: #e8edf3;
 }
