--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,28 +1,25 @@
 <!DOCTYPE html>
-	<html>
-		<head>
-			<title>{{ page.title }}</title>
-			<link rel="stylesheet" type="text/css" href="/css/main.css">
-		</head>
-		<body>
-			<nav>
-	    		<ul>
-	    			<li><a class="active" href="/">Home</a></li>
-  				<li><a href="/about">About Me</a></li>
-  				<li><a href="/projects">Projects</a></li>
-  				<li><a href="/CV">Resume</a></li>
-			</ul>
-			</nav>
-			<div class="container">
+<html>
+	<head>
+		<title>{{ page.title }}</title>
+		<link rel="stylesheet" type="text/css" href="/css/main.css">
+	</head>
+	<body>
+		<nav>
+	    	<ul>
+	    		<li><a class="active" href="/">Home</a></li>
+  			<li><a href="/about">About Me</a></li>
+  			<li><a href="/projects">Projects</a></li>
+  			<li><a href="/CV">Resume</a></li>
+		</ul>
+		</nav>
+		<div class="container">
 			
-			{{ content }}
-			
-			</div><!-- /.container -->
-			<footer>
-	    		<u2>
-	        		<p id="email">Email: ruhanli168@gmail.com</p>
-	        		<li><a href="https://github.com/RuhanLi">GitHub Link</a></li>
-				</ul>
-			</footer>
-		</body>
-	</html>
+		</div
+	    	<div id="footer">
+        		<p>Email: ruhanli168@gmail.com
+        		<a href="https://github.com/RuhanLi">Github Page</a> 
+        		</p>
+		</div>
+	</body>
+</html>
