--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,10 +12,10 @@
   			<li><a href="/projects">Projects</a></li>
   			<li><a href="/CV">Resume</a></li>
 		</ul>
+		<h1>
+			<p>Raymond Li</p>
+		</h1>
 		</nav>
-		<div class="container">
-			
-		</div
 	    	<div id="footer">
         		<p>Email: ruhanli168@gmail.com
         		<a href="https://github.com/RuhanLi">Github Page</a> 
