--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,10 +16,10 @@
 			<p>Raymond Li</p>
 		</h1>
 		</nav>
-	    	<div id="footer">
+	    	<footer>
         		<p>Email: ruhanli168@gmail.com
         		<a href="https://github.com/RuhanLi">Github Page</a> 
         		</p>
-		</div>
+		</footer>
 	</body>
 </html>
