--- a/css/main.css
+++ b/css/main.css
@@ -49,7 +49,7 @@ p {
 footer {
     position:fixed;
     bottom:0;
-    left:0;
+    text-align:center;
     border-top: 1px solid #d5d5d5;
     font-size: 0.8em;
 }
