--- a/css/main.css
+++ b/css/main.css
@@ -47,11 +47,11 @@ p {
 }
 
 footer {
-    position:fixed;
+    position:absolute;
     bottom:0;
     text-align:center;
     border-top: 1px solid #d5d5d5;
-    font-size: 0.8em;
+    font-size: 0.6em;
 }
 
 
