--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,8 +17,7 @@
 		</h1>
 		</nav>
 	    	<footer>
-        		<p>Email: ruhanli168@gmail.com
-        		<a href="https://github.com/RuhanLi">Github Page</a> 
+        		<p>Email: ruhanli168@gmail.com &nbsp; &nbsp; <a href="https://github.com/RuhanLi">Github Page</a> 
         		</p>
 		</footer>
 	</body>
