--- a/css/main.css
+++ b/css/main.css
@@ -46,6 +46,12 @@ p {
     color: #F8F1F1;
 }
 
+p a {
+    font-size: 1.5em;
+    line-height: 1.4em;
+    color: #d5d5d5;
+}
+
 footer {
     position:absolute;
     bottom:0;
