--- a/css/main.css
+++ b/css/main.css
@@ -53,8 +53,8 @@ p a {
 }
 
 footer {
-    position:absolute;
-    bottom:0;
+    position:fixed;
+    bottom:3px;
     text-align:center;
     border-top: 1px solid #d5d5d5;
     font-size: 0.6em;
